--- a/greeting-service/application-prod.yml
+++ b/greeting-service/application-prod.yml
@@ -10,5 +10,5 @@ management:
       exposure:
         include: "*"
 greeting-service:
-  greeting: "Ciao"
+  greeting: "Pronto"
   default-value: "Mondo"
